# imapfilter-helper

./: .coverage  .gitignore  .gitmodules  12847_the_new_york_times.json  60438_21_cleveland_street_neighbourhood.json  IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  RULE_WIZARD_USAGE.md  TEST_BATCH_EDIT_FEATURE.md  analyze_rules.py  generate_uncovered_rules.py  imapfilter_helper (06.11.2025, 13.57).py  imapfilter_helper.py  migrate_newsletters.py  pyproject.toml  requirements.txt  rule_manager.py  rule_wizard.py  secrets.json  server_probe.py  target-folders.md  test_all_folder_status.py  test_cache_parser.py  test_cache_viewer.py  test_clearscore_cache_analysis.py  test_imap_connection.py  test_integration_wizard.py  test_keyword_config.py  test_keyword_workflow.py  test_match_types.py  test_predefined_keywords.py  test_wizard_smoke.py  wizard.py
.archive/: BATCH_MODE_FLOW.md  KEYBOARD_INPUT_BUG_REPORT.md  PARALLEL_EXECUTE.md  PHASE1_KEYWORD_CONFIG_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_QUICK_REFERENCE.md  PHASE2_VERIFICATION.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_VERIFICATION_CHECKLIST.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PREDEFINED_KEYWORDS_IMPLEMENTATION.md  UI_MESSAGE_FIX_REPORT.md  analyze_historical_rules.py  example_keyword_rules.json  example_phase3_usage.py  example_rule_builder_usage.py  fix_priority_conflicts.py  migrate_finance.py  phase1_integration_example.py  test_batch_edit_condition.py  test_clearscore_batch_diagnosis.py  test_clearscore_coverage.py  test_clearscore_issue.py  test_clearscore_rule_fixed.py  test_clearscore_rule_loading.py  test_filterable_list_unit.py  test_filterable_selector.py  test_integration.py  test_pattern_extractors.py  test_rule_builder.py  test_rule_format.py  test_streaming.py  test_wizard_basic.py  test_wizard_integration.py
core/: __init__.py  backup.py  cache.py  cache_builder.py  cli.py  config.py  conflict_detector.py  connection_pool.py  database.py  executor.py  imap.py  imap_client.py  keywords.py  logging_utils.py  mbox_importer.py  notifications.py  rule_engine.py  rule_utils.py  rules.py  (+8 more)
(+905 files in other folders)
