[project]
name = "imapfilter-helper"
version = "1.0.0"
description = "Cache-assisted IMAP mailbox filtering: rule evaluation, action execution, and rule-authoring tools"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.50.0",     # progress bars: cache building, message processing, execution
    "requests>=2.25.0", # Gotify notification support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.10.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
extend-exclude = [".archive", "rules"]

[tool.ruff.lint]
# Default rule set: pyflakes (F) + pycodestyle errors (E4/E7/E9).
[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export their submodules' public names.
"**/__init__.py" = ["F401"]
# Tests and root entry scripts adjust sys.path (and stub tqdm) before imports.
"tests/*" = ["E402"]
"wizard.py" = ["E402"]
"server_probe.py" = ["E402"]
"rule_wizard.py" = ["E402"]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
# Only collect from tests/. Root-level and .archive/ scripts named test_*.py
# are diagnostics, not tests — some connect to the live IMAP server at import.
testpaths = ["tests"]
# Make `import core...` work under the `pytest` console script too, which
# (unlike `python -m pytest`) does not put the current directory on sys.path.
pythonpath = ["."]
